objects/ASI_CRM_CN_Issue_No_Reply_Daily_Count__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Num_of_Issues__c</fullName>
        <label>Number of Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Issues (CN) Without Reply Daily Count</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Issues (CN) Without Reply Daily Count Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues (CN) Without Reply Daily Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>